--- a/index.html
+++ b/index.html
@@ -108,20 +108,19 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/nav_logo_1.png"  class=" img-fluid main-logo" alt="logo" width="150">
+                        <img src="assets/img/nav_logo_1.png" class=" img-fluid main-logo" alt="logo" width="150">
                         <img src="assets/img/nav_logo_2.png" class="white-logo" alt="logo">
                     </a>
                     <div class="collapse navbar-collapse mean-menu">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a href="#" class="nav-link active">Home <i
-                                        class="bx bx-chevron-down"></i></a>
-                                <ul class="dropdown-menu">
+                            <li class="nav-item"><a href="#" class="nav-link active">Home </a>
+                                <!-- <ul class="dropdown-menu">
                                     <li class="nav-item"><a href="index.html" class="nav-link active">Home 1</a></li>
                                     <li class="nav-item"><a href="index-2.html" class="nav-link">Home 2</a></li>
                                     <li class="nav-item"><a href="index-3.html" class="nav-link">Home 3</a></li>
                                     <li class="nav-item"><a href="index-4.html" class="nav-link">Home 4</a></li>
                                     <li class="nav-item"><a href="index-5.html" class="nav-link">Home 5</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <li class="nav-item megamenu"><a href="#" class="nav-link">Shop <i
                                         class="bx bx-chevron-down"></i></a>
@@ -130,7 +129,7 @@
                                         <div class="container">
                                             <div class="row justify-content-center">
                                                 <div class="col">
-                                                    <h6 class="submenu-title">Shop Styles</h6>
+                                                    <h6 class="submenu-title">Kids Wear</h6>
                                                     <ul class="megamenu-submenu">
                                                         <li><a href="products-left-sidebar.html">Left Sidebar</a></li>
                                                         <li><a href="products-left-sidebar-with-categories.html">Left
@@ -218,7 +217,7 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="nav-item megamenu"><a href="#" class="nav-link">Pages <i
+                            <li class="nav-item megamenu"><a href="#" class="nav-link">Boy's <i
                                         class="bx bx-chevron-down"></i></a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
@@ -459,9 +458,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a href="#" class="nav-link">Blog <i
-                                        class="bx bx-chevron-down"></i></a>
-                                <ul class="dropdown-menu">
+                            <li class="nav-item"><a href="#" class="nav-link">Blog </a>
+                                <!-- <ul class="dropdown-menu">
                                     <li class="nav-item"><a href="blog-1.html" class="nav-link">Grid (2 in Row)</a></li>
                                     <li class="nav-item"><a href="blog-2.html" class="nav-link">Grid (3 in Row)</a></li>
                                     <li class="nav-item"><a href="blog-3.html" class="nav-link">Grid (4 in Row)</a></li>
@@ -481,7 +479,7 @@
                                                     Image Slider</a></li>
                                         </ul>
                                     </li>
-                                </ul>
+                                </ul> -->
                             </li>
                         </ul>
                         <div class="others-option">
@@ -2274,7 +2272,7 @@
                                 <li><i class="bx bx-envelope"></i> <a
                                         href="/cdn-cgi/l/email-protection#d5bdb0b9b9ba95ada1babbfbb6bab8"><span
                                             class="__cf_email__"
-                                            data-cfemail="92faf7fefefdd2eae6fdfcbcf1fdff">[email&#160;protected]</span></a>
+                                            data-cfemail="92faf7fefefdd2eae6fdfcbcf1fdff">Siyaavar@gamil.com</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -2295,24 +2293,23 @@
                         <h3>New In Store</h3>
                         <ul class="products-list">
                             <li>
-                                <a href="products-one-row-2.html"><img src="assets/img/products/img1.jpg"
-                                        alt="image"></a>
+                                <a href="products-one-row-2.html"><img src="assets/img/products/Saari_3_black.jpg"
+                                        alt="image" style="max-height: 100px;"  ></a>
                             </li>
                             <li>
-                                <a href="products-one-row-2.html"><img src="assets/img/products/img2.jpg"
-                                        alt="image"></a>
+                                <a href="products-one-row-2.html"><img src="assets/img/products/img-01.jpg"
+                                        alt="image" style="max-height: 100px;"></a>
                             </li>
                             <li>
-                                <a href="products-one-row-2.html"><img src="assets/img/products/img3.jpg"
-                                        alt="image"></a>
+                                <a href="products-one-row-2.html"><img src="assets/img/products/img-03.jpg"
+                                        alt="image" style="max-height: 100px;"></a>
                             </li>
                             <li>
-                                <a href="products-one-row-2.html"><img src="assets/img/products/img4.jpg"
-                                        alt="image"></a>
+                                <a href="products-one-row-2.html"><img src="assets/img/products/pinkplane-1.jpg"
+                                        alt="image" style="max-height: 100px;"></a>
                             </li>
                         </ul>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <p>"Discover the latest trends with our new arrivals! Fresh styles, vibrant colors, and premium fabrics—revamp your wardrobe with must-have pieces today."</p>
                         <a href="products-left-sidebar-with-categories-3.html" class="shop-now-btn">Shop Now</a>
                     </div>
                 </div>
